[package]
name = "gitmoji"
version = "0.1.0"
authors = ["Jonas Geschke <github@yonny.de>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^2.33.0", features = ["yaml", "wrap_help"] }
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
enquirer = "0.3.0"
spinners = "1.2.0"
dirs = "2.0.2"
json = "0.12.1"
colored = "1.9.2"
once_cell = "1.3.1"
dialoguer = "0.5.0"
config = "0.10.1"
