[package]
name = "gitmoji"
version = "1.1.0"
authors = ["Jonas Geschke <github@yonny.de>"]
edition = "2018"
license = "MIT"
description = "CLI for gitmoji"
homepage = "https://github.com/kegesch/gitmoji-cli"
repository = "https://github.com/kegesch/gitmoji-cli"
documentation = "https://docs.rs/gitmoji-cli"

[dependencies]
clap = { version = "^2.33.0", features = ["yaml", "wrap_help"] }
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
enquirer = "0.3.0"
spinners = "1.2.0"
dirs = "2.0.2"
json = "0.12.1"
colored = "1.9.2"
once_cell = "1.3.1"
dialoguer = { git = "https://github.com/SirWindfield/dialoguer", branch = "feat_fuzzy", version = "0.6.2", features = ["fuzzy-select"] }
confy = "0.3.1"
serde_derive = "1.0.104"
serde = "1.0.104"
